--- a/style.css
+++ b/style.css
@@ -47,12 +47,14 @@ body {
 .articleCursus {
     background-color: #F1F1F1;
     padding: 15px;
-    margin: 15px;
-    width: 55%;
+    margin: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+    width: 50%;
 }
 .banniere {
-    background-color: rgb(246, 84, 84);
-    height: 100px;
+    background-color: rgb(247, 108, 108);
+    height: 200px;
 }
 
 .articleDiv {
