--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@ mobile first
 */
 
 body {
-    display: flex;
-    flex-wrap: nowrap;
-    margin: 0 auto;
-    font-family: 'Monserrat', 'Open sans', 'sans-serif';
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 0 auto;
+  font-family: "Varela Round", "Monserrat", "Open sans", sans-serif;
+  color: #39424e;
 }
 
-@media (min-width: 800px){
-    body{
-        display: flex;
-        flex-wrap: wrap;
-    }
+@media (min-width: 800px) {
+  body {
+    flex-wrap: wrap;
+  }
 }
 
 /*
@@ -22,76 +22,106 @@ Propriétés de la navbar
 mobile first
 */
 
-.sidebar{
-    width: 12.5em;
-    display: flex;
+.sidebar {
+  display: flex;
+  width: 12.5em;
 }
 
-@media (min-width: 800px){
-    .sidebar{
-        display: flex;
-        width: 100%;
-    }
+@media (min-width: 800px) {
+  .sidebar {
+    width: 100%;
+  }
 }
 
 nav ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: lightgrey;
-    width: 12.5em;
-    margin: 0;
-    padding: 0.625em;
-    font-size: 1.063em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: lightgrey;
+  width: 12.5em;
+  margin: 0;
+  padding: 0.625em;
+  font-size: 1.063em;
 }
 
-@media (min-width: 800px){
-    nav ul{
-        flex-direction: row;
-        width: 100%;
-    }
+@media (min-width: 800px) {
+  nav ul {
+    flex-direction: row;
+    width: 100%;
+    padding: 1.5em;
+  }
 }
 
 nav ul li {
-    list-style: none;
+  list-style: none;
 }
 
 nav ul li a {
-    color: black;
-    text-decoration: none;
+  color: #39424e;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 nav ul li a:hover {
-    color: goldenrod;
+  color: #F76F6F;
 }
 
 #logo {
-    height: 3em;
+  height: 3em;
 }
+
+@media (min-width: 800px) {
+    #logo {
+      display: none;
+    }
+  }
 
 /*
 Propriétés de la bannière
 mobile first
 */
 
-.banniere{
-    background: white;
-    width: 100%;
+.banniere {
+  background: white;
+  width: 100%;
 }
 
-#banniere{
-    max-width: 100%;
-    height: auto;
+#banniere-img {
+  max-width: 100%;
+  height: auto;
 }
 
-@media (min-width: 800px){
-    #banniere{
-        max-width: 100%;
-        height: auto;
-        display: block;
-        margin: auto;
-    }
+@media (min-width: 800px) {
+  #banniere-img {
+    display: block;
+    margin: auto;
+  }
+}
+
+/*
+Propriétés générales du titre principal
+mobile first
+*/
+
+.main-title {
+  text-align: center;
+  font-family: "Varela Round", sans-serif;
+  font-size: small;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  background: white;
+  padding-top: 0.5em;
+  padding-bottom: 1.5em;
+}
+
+@media (min-width: 800px) {
+  .main-title {
+    font-size: large;
+  }
 }
 
 /*
@@ -99,14 +129,14 @@ Propriétés générales du corps
 mobile first
 */
 
-.body {
-    width: 37.5em;
-    background-color: #D99F9F;
-    margin: 0px;
+.container-main {
+  width: 37.5em;
+  background-color: lavenderblush;
+  margin: 0px;
 }
 
-@media (min-width: 800px){
-    .body{
-        width: 100%;
-    }
+@media (min-width: 800px) {
+  .container-main {
+    width: 100%;
+  }
 }
