--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav ul {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background-color: lightgrey;
+  background-color: #39424e;
   width: 12.5em;
   margin: 0;
   padding: 0.625em;
@@ -58,7 +58,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #39424e;
+  color: white;
   font-weight: bold;
   text-decoration: none;
 }
