--- a/navBan.css
+++ b/navBan.css
@@ -1,75 +1,73 @@
 /*  Navbar CSS  */
-.sidebar{
-    width: 12.5em;
-    display: flex;
-}
-
-@media (min-width: 800px){
-    .sidebar{
-        display: flex;
-        width: 100%;
-    }
-}
-
-nav ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: lightgrey;
-    width: 12.5em;
-    margin: 0;
-    padding: 0.625em;
-    font-size: 1.063em;
-}
-
-@media (min-width: 800px){
-    nav ul{
-        flex-direction: row;
-        width: 100%;
-    }
-}
-
-nav ul li {
-    list-style: none;
-}
-
-nav ul li a {
-    color: black;
-    text-decoration: none;
-}
-
-nav ul li a:hover {
-    color: goldenrod;
-}
-
-#logo {
-    height: 3em;
+.sidebar {
+  display: flex;
+  width: 12.5em;
 }
 
 @media (min-width: 800px) {
-    #logo {
-      display: none;
-    }
+  .sidebar {
+    width: 100%;
+    position: fixed;
   }
+}
+
+nav ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #39424e;
+  width: 12.5em;
+  margin: 0;
+  padding: 0.625em;
+  font-size: 1.063em;
+}
+
+@media (min-width: 800px) {
+  nav ul {
+    flex-direction: row;
+    width: 100%;
+    padding: 1.5em;
+  }
+}
+
+nav ul li {
+  list-style: none;
+}
+
+nav ul li a {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: #f76f6f;
+}
+
+#logo {
+  height: 3em;
+}
 
 /*  Banniere CSS  */ 
 .banniere {
-    background: white;
-    width: 100%;
-  }
-  
+  background: white;
+  width: 100%;
+}
+
+#banniere-img {
+  max-width: 100%;
+  height: auto;
+}
+
+@media (min-width: 800px) {
   #banniere-img {
-    max-width: 100%;
-    height: auto;
+    display: block;
+    margin: auto;
+    padding-top: 5em;
   }
-  
-  @media (min-width: 800px) {
-    #banniere-img {
-      display: block;
-      margin: auto;
-    }
-  }
+}
+
 
  /* Div Body */
 .body {
@@ -106,12 +104,39 @@ nav ul li a:hover {
   }
 
   /* Footer CSS */
-.footer {
-  background-color: rgb(253, 130, 130);
-  font-size: 13px;
-  width: 100%;
-}
-.flex-container {
-  display: flex;
-  justify-content: space-around;
-}
+  footer {
+    background: pink;
+    padding: 0.3em;
+  }
+  
+  footer p {
+    text-align: center;
+    font-style: italic;
+    font-size: 1.2em;
+  }
+  
+  .container-footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 1.5em;
+  }
+  
+  .wilder-reseaux {
+    color: white;
+    /* background: border-box rgba(57, 66, 78, 0.75); */
+    background: border-box rgba(247, 111, 111, 0.7);
+    width: 13em;
+    border-radius: 1em;
+    margin: 1em;
+  }
+  
+  footer ul li {
+    display: flex;
+    list-style: none;
+  }
+  
+  .icone {
+    width: 35%;
+    height: 35%;
+  }
