--- a/prototype.css
+++ b/prototype.css
@@ -37,6 +37,14 @@ mobile first
   }
 }
 
+@media (max-width: 320px) {
+  .sidebar {
+    position: fixed;
+    width: 20%;
+    height: 100%;
+  }
+}
+
 nav ul {
   display: flex;
   flex-direction: column;
@@ -54,6 +62,12 @@ nav ul {
     flex-direction: row;
     width: 100%;
     padding: 1.5em;
+  }
+}
+
+@media (max-width: 320px) {
+  nav ul {
+    font-size : 0.9em;
   }
 }
 
@@ -80,6 +94,11 @@ nav ul li a:hover {
       display: none;
     }
   } */
+ @media (max-width: 320px) {
+    #logo {
+      display: none;
+    }
+  } 
 
 /*
 Propriétés de la bannière
@@ -145,6 +164,12 @@ mobile first
   .container-main {
     width: 100%;
     padding-left: 0;
+  }
+}
+@media (max-width: 320px) {
+  .container-main {
+    width: 100%;
+    padding-left: 32%;
   }
 }
 
