--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   color: #39424e;
 }
 
-@media (min-width: 800px) {
+@media (min-width : 1000px) {
   body {
     flex-wrap: wrap;
   }
@@ -25,13 +25,12 @@ mobile first
 .sidebar {
   display: flex;
   position: fixed;
-  width: 12.5em;
-  height: 100vh;
+  width: 20vw;
+  height: 100%;
 }
 
-@media (min-width: 800px) {
+@media (min-width : 1000px) {
   .sidebar {
-    position: fixed;
     width: 100%;
     height: auto;
   }
@@ -42,14 +41,14 @@ nav ul {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
   background-color: #39424e;
-  width: 12.5em;
+  width: 20vw;
   margin: 0;
   padding: 0.625em;
-  font-size: 1.063em;
 }
 
-@media (min-width: 800px) {
+@media (min-width : 1000px) {
   nav ul {
     flex-direction: row;
     width: 100%;
@@ -63,8 +62,15 @@ nav ul li {
 
 nav ul li a {
   color: white;
+  font-size: 0.7em;
   font-weight: bold;
   text-decoration: none;
+}
+
+@media (min-width : 700px) {
+  nav ul li a {
+    font-size: 1.063em;
+  }
 }
 
 nav ul li a:hover {
@@ -72,10 +78,11 @@ nav ul li a:hover {
 }
 
 #logo {
-  height: 3em;
+  height: 10vw;
+  max-height: 3em;
 }
 
-/* @media (min-width: 800px) {
+/* @media (min-width: 1000px) {
     #logo {
       display: none;
     }
@@ -96,7 +103,7 @@ mobile first
   height: auto;
 }
 
-@media (min-width: 800px) {
+@media (min-width : 1000px) {
   #banniere-img {
     display: block;
     margin: auto;
@@ -124,7 +131,7 @@ mobile first
   padding-bottom: 1.5em;
 }
 
-@media (min-width: 800px) {
+@media (min-width : 1000px) {
   .main-title {
     font-size: large;
   }
@@ -136,12 +143,10 @@ mobile first
 */
 
 .container-main {
-  width: 37.5em;
-  margin: 0px;
-  padding-left: 12.5em;
+  padding-left: 20vw;
 }
 
-@media (min-width: 800px) {
+@media (min-width : 1000px) {
   .container-main {
     width: 100%;
     padding-left: 0;
@@ -149,7 +154,14 @@ mobile first
 }
 
 .container-main-body {
-  padding: 1.5em;
+  padding: 0 1em 0 1.5em;
+  text-align: justify;
+}
+
+@media (min-width : 700px) {
+  .container-main-body {
+    padding: 1.5em;
+  }
 }
 
 /*
@@ -159,29 +171,61 @@ mobile first
 
 footer {
   background: pink;
-  padding: 0.3em;
+  padding-top: 0.3em;
+  padding-left: 1.2em;
+}
+
+@media (min-width : 700px) {
+  footer {
+    padding: 0.3em;
+  }
 }
 
 footer p {
   text-align: center;
   font-style: italic;
-  font-size: 1.2em;
+  font-size: 0.8em;
+}
+
+@media (min-width : 700px) {
+  footer p {
+    font-size: 1.2em;
+  }
 }
 
 .container-footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding-bottom: 1.5em;
+  padding-bottom: 0.5em;
+}
+
+@media (min-width : 700px) {
+  .container-footer {
+    padding-bottom: 1.5em;
+  }
 }
 
 .wilder-reseaux {
   color: white;
   /* background: border-box rgba(57, 66, 78, 0.75); */
   background: border-box rgba(247, 111, 111, 0.7);
-  width: 13em;
+  width: 6.2em;
   border-radius: 1em;
-  margin: 1em;
+  margin: 0.3em;
+}
+
+@media (min-width : 700px) and (max-width : 1000px) {
+  .wilder-reseaux {
+    width: 11em;
+    margin: 1em;
+  }
+}
+
+@media (min-width : 1000px) {
+  .wilder-reseaux {
+    width: 13em;
+  }
 }
 
 footer ul li {
