--- a/style-index.css
+++ b/style-index.css
@@ -158,30 +158,46 @@ mobile first
 */
 
 footer {
-  background: pink;
-  padding: 0.3em;
+  background: linear-gradient( #4e5864,  #39424e);
+  padding: 0.5em;
+  height: 25rem;
 }
 
-footer p {
+.texte-footer {
+  display: flex;
+  justify-content: center;
   text-align: center;
-  font-style: italic;
-  font-size: 1.2em;
+  width: 100%;
+  font-size: 01rem;
+  color: white;
+}
+
+h4 {
+  margin-bottom: 2rem;
+  font-size: 0.9em;
+  color: white;
+  text-align: center;
 }
 
 .container-footer {
   display: flex;
-  flex-wrap: wrap;
+  background-color:   linear-gradient(to left, #d3d5d8,  #546377);
+  width: 100%;
   justify-content: space-around;
-  padding-bottom: 1.5em;
+  align-items: space;
+  height: 15rem;
 }
 
 .wilder-reseaux {
-  color: white;
+  color: black;
   /* background: border-box rgba(57, 66, 78, 0.75); */
-  background: border-box rgba(247, 111, 111, 0.7);
-  width: 13em;
-  border-radius: 1em;
-  margin: 1em;
+  border-left: solid 1px rgb(253, 130, 130);
+  border-right: solid 2px rgb(253, 130, 130);
+  height: 5rem;
+  ;
+  width: 10rem;
+  ;
+  margin: 3rem;
 }
 
 footer ul li {
@@ -190,99 +206,92 @@ footer ul li {
 }
 
 .icone {
-  width: 35%;
-  height: 35%;
+  display: inline-block;
+  margin: 0.8rem;
+  width: 15%;
+  height: 30%;
 }
-
-
-
-
-
-/* Fatima index - titre de la page */
-.main-title {
-  display: flex;
-  flex-direction: column;
- 
-  background-color: rgba(245, 245, 245);
-  height: 15rem;
- 
-}
-.h1index{
-  width: 100%;
-  height: 80%;
-  font-size: 4rem;
-  color :  #39424e;
-  text-shadow: 1px 1px 2px grey;
-  display: flex;
-  justify-content: center;
-  align-items: column;
-  margin : 0;
-  margin-top : 3rem;
-  
-}
-
-.h1-second-index{
-  width: 100%;
-  color : rgb(253, 130, 130);
-  text-shadow: 1px 1px 2px grey;
-  display: flex;
-  justify-content: center;
-  align-items: column;
-  background-color: rgba(245, 245, 245);
- 
- 
-  
-
-}
-
-/* Fatima index - section article x3 page */
-.index-section-articles{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: white;
-  height: 70rem;
- 
-
-
-}
-
-.quisommesnous, .pourquoi, .remote {
-  display: flex;
-  box-shadow:  5px  rgba(155, 152, 152, 0.534);
-  border : solid 1px rgba(155, 152, 152, 0.534);
-  border-radius: 30px;
-  justify-content: end;
-  align-items: center;
-  flex-direction: column;
-  width: 36rem;
-  height: 80%;
-}
-
-.text-index, .h2index, .image-remote{
-  display: flex;
-  
-  flex-direction: column;
-  
-  width: 80%;
-}
-
-.image-remote{
-  
-  width: 90%;
-}
-.text-index{
-  height: 50%;
-}
-
 
 /* Footer CSS */
+
 .footer {
   background-color: rgb(253, 130, 130);
   font-size: 13px;
   width: 100%;
 }
+
 .flex-container {
   display: flex;
   justify-content: space-around;
+}
+
+/*------------------------------------------------------------
+/* Fatima index - titre de la page */
+
+.main-title {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(245, 245, 245);
+  height: 15rem;
+}
+
+.h1index {
+  width: 100%;
+  height: 80%;
+  font-size: 4rem;
+  color: #39424e;
+  text-shadow: 1px 1px 2px grey;
+  display: flex;
+  justify-content: center;
+  align-items: column;
+  margin: 0;
+  margin-top: 3rem;
+}
+
+.h1-second-index {
+  width: 100%;
+  color: rgb(253, 130, 130);
+  text-shadow: 1px 1px 2px grey;
+  display: flex;
+  justify-content: center;
+  align-items: column;
+  background-color: rgba(245, 245, 245);
+}
+
+/* Fatima index - section article x3 page */
+
+.index-section-articles {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  height: 70rem;
+}
+
+.quisommesnous, .pourquoi, .remote {
+  display: flex;
+  box-shadow: 5px rgba(155, 152, 152, 0.534);
+  border: solid 1px rgba(155, 152, 152, 0.534);
+  border-radius: 30px;
+  justify-content: end;
+  text-justify: auto;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  width: 36rem;
+  height: 80%;
+}
+
+.text-index, .h2index, .image-remote {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+.image-remote {
+  width: 90%;
+}
+
+.text-index {
+  height: 50%;
 }
