--- a/prototype.css
+++ b/prototype.css
@@ -9,39 +9,31 @@ body {
   margin: 0 auto;
   font-family: "Varela Round", "Monserrat", "Open sans", sans-serif;
   color: #39424e;
+  width: auto;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
   body {
     flex-wrap: wrap;
   }
 }
 
 /*
-Propriétés de la navbar
-mobile first
-*/
+    Propriétés de la navbar
+    mobile first
+    */
 
 .sidebar {
   display: flex;
   position: fixed;
-  width: 12.5em;
-  height: 100vh;
+  width: 20vw;
+  height: 100%;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
   .sidebar {
-    position: fixed;
     width: 100%;
     height: auto;
-  }
-}
-
-@media (max-width: 320px) {
-  .sidebar {
-    position: fixed;
-    width: 20%;
-    height: 100%;
   }
 }
 
@@ -50,24 +42,19 @@ nav ul {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
   background-color: #39424e;
-  width: 12.5em;
+  width: 20vw;
   margin: 0;
   padding: 0.625em;
-  font-size: 1.063em;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
   nav ul {
     flex-direction: row;
     width: 100%;
+    height: 6.5vh;
     padding: 1.5em;
-  }
-}
-
-@media (max-width: 320px) {
-  nav ul {
-    font-size : 0.9em;
   }
 }
 
@@ -77,8 +64,22 @@ nav ul li {
 
 nav ul li a {
   color: white;
+  font-size: 0.7em;
   font-weight: bold;
   text-decoration: none;
+}
+
+@media (min-width:800px) and (max-width: 1000px) {
+  nav ul li a {
+    font-size: 0.95em;
+  }
+}
+
+@media (min-width: 1000px) {
+  nav ul li a {
+    font-size: 1.063em;
+    padding-left: 1.5em;
+  }
 }
 
 nav ul li a:hover {
@@ -86,24 +87,20 @@ nav ul li a:hover {
 }
 
 #logo {
-  height: 3em;
+  height: 10vw;
+  max-height: 3em;
 }
 
-/* @media (min-width: 800px) {
-    #logo {
-      display: none;
-    }
-  } */
- @media (max-width: 320px) {
-    #logo {
-      display: none;
-    }
-  } 
+@media (min-width: 1000px) {
+  #logo {
+    display: none;
+  }
+}
 
 /*
-Propriétés de la bannière
-mobile first
-*/
+    Propriétés de la bannière
+    mobile first
+    */
 
 .banniere {
   background: white;
@@ -115,12 +112,7 @@ mobile first
   height: auto;
 }
 
-.banniere-img {
-  max-width: 100%;
-  height: auto;
-}
-
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
   #banniere-img {
     display: block;
     margin: auto;
@@ -129,14 +121,14 @@ mobile first
 }
 
 /*
-Propriétés générales du titre principal
-mobile first
-*/
+    Propriétés générales du titre principal
+    mobile first
+    */
 
 .main-title {
   text-align: center;
   font-family: "Varela Round", sans-serif;
-  font-size: small;
+  font-size: medium;
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
@@ -144,82 +136,165 @@ mobile first
   letter-spacing: normal;
   text-shadow: 1px 1px 2px #39424e;
   background: white;
+  padding-left: 5vw;
   padding-top: 0.5em;
   padding-bottom: 1.5em;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
   .main-title {
     font-size: large;
+    padding-left: 0;
   }
 }
 
 /*
-Propriétés générales du corps
-mobile first
+  Page globale or navbar
 */
-
-.container-main {
-  width: 37.5em;
-  margin: 0px;
-  padding-left: 12.5em;
+ .container-main {
+  padding-left: 20vw;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
   .container-main {
     width: 100%;
     padding-left: 0;
   }
 }
-@media (max-width: 320px) {
-  .container-main {
-    width: 100%;
-    padding-left: 32%;
-  }
-}
-
-.container-main-body {
-  padding: 1.5em;
-}
 
 /*
-Propriétés générales du footer
-mobile first
+  Propriétés générales du footer
+  mobile first
 */
 
 footer {
-  background: pink;
-  padding: 0.3em;
+  background: linear-gradient(#6c737e, #212831);
+  /* box-shadow: 0px -10px 50px 0px rgb(83, 92, 97); */
+  padding-top: 0.3em;
+  padding-left: 1.2em;
 }
 
-footer p {
-  text-align: center;
-  font-style: italic;
-  font-size: 1.2em;
+@media (min-width: 700px) {
+  footer {
+    padding: 0.3em;
+  }
 }
 
 .container-footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding-bottom: 1.5em;
+  padding-bottom: 0.5em;
+}
+
+@media (min-width: 700px) {
+  .container-footer {
+    padding: 1.5em 0;
+  }
 }
 
 .wilder-reseaux {
   color: white;
-  /* background: border-box rgba(57, 66, 78, 0.75); */
-  background: border-box rgba(247, 111, 111, 0.7);
-  width: 13em;
-  border-radius: 1em;
-  margin: 1em;
+  border-left: 5px double rgba(247, 111, 111, 1);
+  border-right: 5px double rgba(247, 111, 111, 1);
+  border-radius: 0.5em;
+  width: 5em;
+  height: 3em;
+  margin: 0.4em;
 }
 
-footer ul li {
+@media (min-width: 700px) and (max-width: 1000px) {
+  .wilder-reseaux {
+    border-left: 5px double rgba(247, 111, 111, 1);
+    border-right: 5px double rgba(247, 111, 111, 1);
+    width: 13em;
+    height: 6em;
+    margin: 1em;
+  }
+}
+
+@media (min-width: 1000px) {
+  .wilder-reseaux {
+    border-left: 5px double rgba(247, 111, 111, 1);
+    border-right: 5px double rgba(247, 111, 111, 1);
+    width: 13em;
+    height: 6em;
+  }
+}
+
+.wilder-reseaux-container-icones {
   display: flex;
-  list-style: none;
+  justify-content: space-around;
+}
+
+.wilder-reseaux-container-icones a {
+  padding: 0;
+}
+
+@media (min-width: 1000px) {
+  .wilder-reseaux-container-icones a {
+    margin-right: -3.75em;
+    padding: 0;
+  }
 }
 
 .icone {
-  width: 35%;
-  height: 35%;
+  width: 55%;
+  height: auto;
+  padding-left: 0.38em;
+}
+
+@media (min-width: 700px) and (max-width: 1000px) {
+  .icone {
+    width: 55%;
+    height: auto;
+    padding-left: 0.9em;
+  }
+}
+
+@media (min-width: 1000px) {
+  .icone {
+    width: 40%;
+    height: auto;
+    padding: 0;
+  }
+}
+
+footer h4 {
+  text-align: center;
+  color: white;
+  font-size: 0.5em;
+  margin: 0.5rem;
+}
+
+@media (min-width: 700px) and (max-width: 1000px) {
+  footer h4 {
+    text-align: center;
+    color: white;
+    font-size: 1.1em;
+    margin-bottom: 2rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  footer h4 {
+    text-align: center;
+    color: white;
+    font-size: 1.1em;
+    margin-bottom: 2rem;
+  }
+}
+
+.text-footer {
+  text-align: center;
+  font-style: italic;
+  font-size: 0.6em;
+  color: white;
+  padding-bottom: 1em;
+}
+
+@media (min-width: 700px) {
+  .text-footer {
+    font-size: 0.9em;
+  }
 }
