--- a/index.css
+++ b/index.css
@@ -10,11 +10,48 @@
     margin-left: 50px;
     margin-right: 50px;
     width: 50%;
-    border-radius: 10px;
+    border-radius: 30px;
+    box-shadow: 5px rgba(155, 152, 152, 0.534);
+    border: solid 1px rgba(155, 152, 152, 0.534);
 }
 
 @media (max-width: 800px) {
     .articles {
         flex-wrap: wrap;
     }
+  }
+
+  .text-index, .h2index {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+  }
+
+  .image-remote {
+    width: 50%;
+  }
+
+  @media (min-width: 800px) {
+    .image-remote {
+      width: 90%;
+    }
+  }
+
+  .text-index {
+    height: 50%;
+  }
+
+  .quisommesnous, .pourquoi, .remote {
+    display: flex;
+    flex-wrap: wrap;
+    box-shadow: 5px rgba(155, 152, 152, 0.534);
+    border: solid 1px rgba(155, 152, 152, 0.534);
+    border-radius: 30px;
+    justify-content: space-around;
+    text-justify: auto;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    width: 30%;
+    height: 80%;
   }
