--- a/style-index.css
+++ b/style-index.css
@@ -1,229 +1,4 @@
-/*
-Propriétés générales du site
-mobile first
-*/
 
-body {
-  display: flex;
-  flex-wrap: nowrap;
-  margin: 0 auto;
-  font-family: "Varela Round", "Monserrat", "Open sans", sans-serif;
-  color: #39424e;
-}
-
-@media (min-width: 800px) {
-  body {
-    flex-wrap: wrap;
-  }
-}
-
-/*
-Propriétés de la navbar
-mobile first
-*/
-
-.sidebar {
-  display: flex;
-  position: fixed;
-  width: 12.5em;
-  height: 100vh;
-}
-
-@media (min-width: 800px) {
-  .sidebar {
-    position: fixed;
-    width: 100%;
-    height: auto;
-  }
-}
-
-nav ul {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #39424e;
-  width: 12.5em;
-  margin: 0;
-  padding: 0.625em;
-  font-size: 1.063em;
-}
-
-@media (min-width: 800px) {
-  nav ul {
-    flex-direction: row;
-    width: 100%;
-    padding: 1.5em;
-  }
-}
-
-nav ul li {
-  list-style: none;
-}
-
-nav ul li a {
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-nav ul li a:hover {
-  color: #f76f6f;
-}
-
-#logo {
-  height: 3em;
-}
-
-/* @media (min-width: 800px) {
-    #logo {
-      display: none;
-    }
-  } */
-
-/*
-Propriétés de la bannière
-mobile first
-*/
-
-.banniere {
-  background: white;
-  width: 100%;
-}
-
-#banniere-img {
-  max-width: 100%;
-  height: auto;
-}
-
-@media (min-width: 800px) {
-  #banniere-img {
-    display: block;
-    margin: auto;
-    padding-top: 5em;
-  }
-}
-
-/*
-Propriétés générales du titre principal
-mobile first
-*/
-
-.main-title {
-  text-align: center;
-  font-family: "Varela Round", sans-serif;
-  font-size: small;
-  font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-shadow: 1px 1px 2px #39424e;
-  background: white;
-  padding-top: 0.5em;
-  padding-bottom: 1.5em;
-}
-
-@media (min-width: 800px) {
-  .main-title {
-    font-size: large;
-  }
-}
-
-/*
-Propriétés générales du corps
-mobile first
-*/
-
-.container-main {
-  width: 37.5em;
-  margin: 0px;
-  padding-left: 12.5em;
-}
-
-@media (min-width: 800px) {
-  .container-main {
-    width: 100%;
-    padding-left: 0;
-  }
-}
-
-.container-main-body {
-  padding: 1.5em;
-}
-
-/*
-Propriétés générales du footer
-mobile first
-*/
-
-footer {
-  background: linear-gradient( #4e5864,  #39424e);
-  padding: 0.5em;
-  height: 25rem;
-}
-
-.texte-footer {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-  font-size: 01rem;
-  color: white;
-}
-
-h4 {
-  margin-bottom: 2rem;
-  font-size: 0.9em;
-  color: white;
-  text-align: center;
-}
-
-.container-footer {
-  display: flex;
-  background-color:   linear-gradient(to left, #d3d5d8,  #546377);
-  width: 100%;
-  justify-content: space-around;
-  align-items: space;
-  height: 15rem;
-}
-
-.wilder-reseaux {
-  color: black;
-  /* background: border-box rgba(57, 66, 78, 0.75); */
-  border-left: solid 1px rgb(253, 130, 130);
-  border-right: solid 2px rgb(253, 130, 130);
-  height: 5rem;
-  ;
-  width: 10rem;
-  ;
-  margin: 3rem;
-}
-
-footer ul li {
-  display: flex;
-  list-style: none;
-}
-
-.icone {
-  display: inline-block;
-  margin: 0.8rem;
-  width: 15%;
-  height: 30%;
-}
-
-/* Footer CSS */
-
-.footer {
-  background-color: rgb(253, 130, 130);
-  font-size: 13px;
-  width: 100%;
-}
-
-.flex-container {
-  display: flex;
-  justify-content: space-around;
-}
 
 /*------------------------------------------------------------
 /* Fatima index - titre de la page */
@@ -231,7 +6,7 @@ footer ul li {
 .main-title {
   display: flex;
   flex-direction: column;
-  background-color: rgba(245, 245, 245);
+ 
   height: 15rem;
 }
 
@@ -255,7 +30,8 @@ footer ul li {
   display: flex;
   justify-content: center;
   align-items: column;
-  background-color: rgba(245, 245, 245);
+  text-decoration: none;
+  
 }
 
 /* Fatima index - section article x3 page */
@@ -270,9 +46,8 @@ footer ul li {
 
 .quisommesnous, .pourquoi, .remote {
   display: flex;
-  box-shadow: 5px rgba(155, 152, 152, 0.534);
-  border: solid 1px rgba(155, 152, 152, 0.534);
-  border-radius: 30px;
+   border-radius: 30px;
+  box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
   justify-content: end;
   text-justify: auto;
   align-items: center;
