--- a/index.css
+++ b/index.css
@@ -4,18 +4,20 @@
 }
 
 .divArticle {
-    background-color: #F1F1F1;
     padding: 15px;
     margin: 30px;
     margin-left: 50px;
     margin-right: 50px;
     width: 50%;
     border-radius: 30px;
-    box-shadow: 5px rgba(155, 152, 152, 0.534);
+    box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
     border: solid 1px rgba(155, 152, 152, 0.534);
+    height: 100%;
+    align-items: center;
+    text-align: center;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     .articles {
         flex-wrap: wrap;
     }
@@ -24,16 +26,37 @@
   .text-index, .h2index {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
   }
 
   .image-remote {
-    width: 50%;
+    width: 100%;
+    height: 15em;
   }
 
-  @media (min-width: 800px) {
+  @media (max-width: 1000px) {
     .image-remote {
-      width: 90%;
+      width: 100%;
+      height: 20%;
+    }
+    .divArticle {
+      width: 60%
+    }
+    .h2index {
+      font-size: 23px;
+    }
+  }
+  @media (max-width: 320px) {
+    .image-remote {
+      width: 100%;
+      height: 10%;
+    }
+    .divArticle {
+      width: 70%;
+      font-size: 13px;
+    }
+    .h2index {
+      font-size: 17px;
     }
   }
 
@@ -41,17 +64,32 @@
     height: 50%;
   }
 
-  .quisommesnous, .pourquoi, .remote {
-    display: flex;
-    flex-wrap: wrap;
-    box-shadow: 5px rgba(155, 152, 152, 0.534);
-    border: solid 1px rgba(155, 152, 152, 0.534);
-    border-radius: 30px;
-    justify-content: space-around;
-    text-justify: auto;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    width: 30%;
-    height: 80%;
+/* TITLE */
+
+.h1index {
+  height: 80%;
+  font-size: 1.75rem;
+  color: #39424e;
+  text-shadow: 1px 1px 2px grey;
+  display: flex;
+  justify-content: center;
+  align-items: column;
+  margin: 0;
+  margin-top: 3rem;
+}
+
+.h1-second-index {
+  color: rgb(253, 130, 130);
+  font-size: 1.25rem;
+  text-shadow: 1px 1px 2px grey;
+  display: flex;
+  justify-content: center;
+  align-items: column;
+  text-decoration: none;
+  
+}
+@media (min-width: 800) {
+  .h1index {
+    font-size: 10em;
   }
+}
