--- a/style-contact.css
+++ b/style-contact.css
@@ -1,8 +1,7 @@
 /* titre page */
 
 .h1index {
-    width: 100%;
-    height: 80%;
+        height: 80%;
     font-size: 4rem;
     color: #39424e;
     text-shadow: 1px 1px 2px grey;
@@ -27,15 +26,18 @@
 
 .reseaux-sociaux {
     margin-left: 3rem;
-}
+    border : red solid;
+    }
 
 .contacter_wild {
+    border : green solid;
     display: flex;
     width: 80%;
     margin-left: 5rem;
 }
 
 .logo-rs-wild {
+    border : black solid;
     list-style: none;
     margin: 0;
     display: flex;
@@ -48,25 +50,118 @@
 }
 
 .blog-wild {
-    display: block;
+    border : red solid;
+    display: flex;
     padding-top: 3rem;
-    width: 100%;
+    width: auto;
 }
 
 .article-blog, .article-blog2, .article-blog3 {
     width: 20rem;
     border-radius: 30px;
     box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
-    display: inline-block;
-    margin-left: 10rem;
-    padding-bottom: 6rem;
+    margin-left: 23%;
+    margin-top: 10%;
 }
 
-/* Formulaire partie 1 contact reseaux sociaux CSS Fatima */
+/** test caroussel */
 
+.caroussel {
+    border: blue solid;
+    width: 50%;
+    display : flex;
+    flex-direction: column;
+    margin-left: 50px;
+    }
+
+.panorama_caroussel{
+    display: inline-block;
+    justify-content: end;
+  
+}
+
+/* Next & previous buttons */
+
+.prev, .next {
+    cursor: pointer;
+    display: inline-block;
+    color: grey;
+    font-size: 30px;
+    transition: 0.8s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* The dots/bullets/indicators */
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    border : black;
+    display: inline-block;
+    justify-self: flex-end;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.fleche{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    bottom : 200px;
+    width: 100%;
+    
+}
+
+/* Fading animation */
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@media (max-width: 800px){
+    .blog-wild{
+        flex-direction: column
+        
+    }
+}
+
+
+/*--------------------------------------------------------------------*/
+/* Formulaire partie 1 contact reseaux sociaux CSS Fatima */
 .formulaire {
+    display : flex;
     margin-left: 3rem;
-    height: 45rem;
+    height: 50rem;
+    width: 100%;
     padding-top: 3rem;
 }
 
@@ -76,7 +171,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 80%;
+    height: 100%;
+    width: 60%;
 }
 
 .divInput {
@@ -88,7 +184,7 @@
 }
 
 .divMessage {
-    width: 80%;
+    
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
@@ -99,8 +195,7 @@
     height: 100%;
     width: 100%;
     border-radius: 3px;
-    font-size : 15px;
-
+    font-size: 15px;
 }
 
 .button {
@@ -116,14 +211,14 @@
 
 @media (min-width: 800px) {
     .divInput {
-        width: 40%;
+        width: 60%;
     }
     .button {
         height: 40px;
         width: 10rem;
     }
     .divMessage {
-        width: 40%;
+        width: 60%;
     }
 }
 
@@ -134,106 +229,11 @@
 }
 
 .texte {
-    height: 20px;
-    width: 100%;
+    height: 50px;
+    width: 100px;
 }
 
 .message {
     height: 100px;
     width: 100%;
 }
-
-/** test caroussel */
-.caroussel{
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-    border : red solid;
-}
-
-
-.caroussel_panorama {
-    display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-
-
-/* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-  
-  /* Caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active, .dot:hover {
-    background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-  }
-  
-  @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-  }
