--- a/index.css
+++ b/index.css
@@ -1,14 +1,16 @@
 .articles {
     display: flex;
     justify-content: space-around;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .divArticle {
     padding: 15px;
     margin: 30px;
-    margin-left: 50px;
-    margin-right: 50px;
-    width: 50%;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 70%;
     border-radius: 30px;
     box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
     border: solid 1px rgba(155, 152, 152, 0.534);
@@ -17,7 +19,7 @@
     text-align: center;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 999px) {
     .articles {
         flex-wrap: wrap;
     }
@@ -34,19 +36,21 @@
     height: 15em;
   }
 
-  @media (max-width: 1000px) {
+  @media (min-width: 800px) and (max-width: 999px) {
     .image-remote {
       width: 100%;
       height: 20%;
     }
     .divArticle {
-      width: 60%
+      width: 60%;
+      padding-left: 40px;
+      padding-right: 40px;
     }
     .h2index {
       font-size: 23px;
     }
   }
-  @media (max-width: 320px) {
+  @media (max-width: 799px) {
     .image-remote {
       width: 100%;
       height: 10%;
@@ -54,6 +58,8 @@
     .divArticle {
       width: 70%;
       font-size: 13px;
+      margin-left: 40px;
+      margin-right: 20px;
     }
     .h2index {
       font-size: 17px;
@@ -88,8 +94,21 @@
   text-decoration: none;
   
 }
-@media (min-width: 800) {
+
+@media (min-width: 800px) {
   .h1index {
-    font-size: 10em;
+    font-size: 3rem;
+  }
+  .h1-second-index {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .h1index {
+    font-size: 3.5rem;
+  }
+  .h1-second-index {
+    font-size: 2.3rem;
   }
 }
