--- a/cursus.css
+++ b/cursus.css
@@ -45,15 +45,33 @@ body {
 }
 
 .articleCursus {
-    background-color: #F1F1F1;
     padding: 15px;
     margin: 30px;
     margin-left: 50px;
     margin-right: 50px;
+    align-items: center;
+    text-align: center;
+    box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
+    border: solid 1px rgba(155, 152, 152, 0.534);
     width: 50%;
-    border-radius: 10px;
+    border-radius: 30px;
 }
 
 .articleDiv {
     background-color: white;
+}
+
+.h2index {
+  width: 100%;
+}
+
+@media (min-width: 800px) and (max-width: 999px) {
+  .h2index {
+    font-size: 23px;
+  }
+}
+@media (max-width: 799px) {
+  .h2index {
+    font-size: 17px;
+  }
 }
