--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,12 @@
+* {
+    margin: 0;
+}
+
 .divContact {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    margin-top: 20px;
 }
 
 .divInput {
@@ -48,7 +53,109 @@
     height: 20px;
     width: 100%;
 }
+
 .message {
     height: 100px;
     width: 100%;
+}
+
+.videoSize {
+    width: 250px
+}
+
+@media (min-width: 800px) {
+    .videoSize {
+        width: 400px;
+        height: 220px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .videoSize {
+        width: 650px;
+        height: 420px;
+    }
+}
+
+.videoCarou {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.caroussel {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
+}
+
+.article-blog, .article-blog2, .article-blog3 {
+    width: 14rem;
+    border-radius: 30px;
+    box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
+    margin-top: 10%;
+}
+
+@media (min-width: 800px) {
+    .article-blog, .article-blog2, .article-blog3 {
+        width: 16rem;
+    } 
+}
+
+@media (min-width: 1200px) {
+    .article-blog, .article-blog2, .article-blog3 {
+        width: 20rem;
+    } 
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    border: black;
+    display: inline-block;
+    justify-self: flex-end;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+/* CAROUSSEL ANIMATION*/
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@media (max-width: 800px) {
+    .blog-wild {
+        flex-direction: column
+    }
 }
