--- a/bien_se_preparer.css
+++ b/bien_se_preparer.css
@@ -1,11 +1,12 @@
 /*koko*/
 
-img {
+
+/*img {
     width: 7em;
     height: 9em;
     opacity: 100%;
     margin-top: 1em;
-}
+}*/
 
 h1 {
     font-weight: bold;
@@ -49,22 +50,28 @@ p {
 }
 
 @media (min-width: 1000px) {
-    img {
+    .imgLeft {
+        float: left;
         margin: 1em;
         width: 16em;
         height: 14em;
         opacity: 100%;
     }
-    .imgLeft {
-        float: left;
-    }
     .imgRight {
         float: right;
         margin-top: 67px;
+        margin: 1em;
+        width: 16em;
+        height: 14em;
+        opacity: 100%;
     }
     .imgsavoiretre {
         margin-top: 4em;
         float: left;
+        margin: 1em;
+        width: 16em;
+        height: 14em;
+        opacity: 100%;
     }
     h1 {
         font-weight: bold;
