--- a/bien_se_preparer.css
+++ b/bien_se_preparer.css
@@ -1,6 +1,5 @@
 /*koko*/
 
-
 /*img {
     width: 7em;
     height: 9em;
@@ -8,86 +7,156 @@
     margin-top: 1em;
 }*/
 
-
 ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 li {
-    padding-top: 1em;
-    height: 2em;
-    font-size: 17px;
-    font-weight: bold;
-    list-style: none;
-    border-radius: 7px;
-    color: white;
+  padding-top: 1em;
+  height: 2em;
+  font-size: 17px;
+  font-weight: bold;
+  list-style: none;
+  border-radius: 7px;
+  color: #f76f6f;
 }
 
 .cadreli {
-    margin-right: 1em;
-    margin-bottom: 3em;
-    margin-left: 2em;
-    border-radius: 9px;
-    border-style: groove;
-    color: black;
-    background-color: #f1f1f1;
+  margin-right: 1em;
+  margin-bottom: 3em;
+  margin-left: 2em;
+  border-radius: 9px;
+  border-style: groove;
+  background-color: #f1f1f1;
+  box-shadow: 10px 10px 20px 10px rgb(0 0 255 / 20%);
+  border: solid 1px rgba(155, 152, 152, 0.534);
 }
 
 a {
-    color: #009688;
+  color: #009688;
 }
 
 p {
-    margin: 10px;
+  margin: 10px;
+}
+
+.imgLeft {
+  float: left;
+  margin: 1em;
+  width: 7em;
+  height: 5em;
+  opacity: 100%;
+}
+
+.imgRight {
+  float: right;
+  margin: 1em;
+  width: 7em;
+  height: 5em;
+  opacity: 100%;
+}
+
+.imgsavoiretre {
+  margin-top: 4em;
+  float: left;
+  margin: 1em;
+  width: 7em;
+  height: 5em;
+  opacity: 100%;
+}
+
+@media (min-width: 0px) and (max-width: 500px) {
+  .imgRight {
+    display: none;
+  }
+  .imgLeft {
+    display: none;
+  }
+  .imgsavoiretre {
+    display: none;
+  }
 }
 
 @media (min-width: 1000px) {
-    .imgLeft {
-        float: left;
-        margin: 1em;
-        width: 16em;
-        height: 14em;
-        opacity: 100%;
-    }
-    .imgRight {
-        float: right;
-        margin-top: 67px;
-        margin: 1em;
-        width: 16em;
-        height: 14em;
-        opacity: 100%;
-    }
-    .imgsavoiretre {
-        margin-top: 4em;
-        float: left;
-        margin: 1em;
-        width: 16em;
-        height: 14em;
-        opacity: 100%;
-    }
-    h1 {
-        font-weight: bold;
-    }
-    .liarticle {
-        padding-top: 1em;
-        height: 2em;
-        font-size: 20px;
-        font-weight: bold;
-        list-style: none;
-        border-radius: 7px;
-        color: white;
-        background-color: #f76f6f;
-        box-shadow: 6px 21px 15px -11px black;
-    }
-    p {
-        margin-top: 2em;
-    }
+  .imgLeft {
+    float: left;
+    margin: 1em;
+    width: 16em;
+    height: 14em;
+    opacity: 100%;
+  }
+  .imgRight {
+    float: right;
+    margin-top: 67px;
+    margin: 1em;
+    width: 16em;
+    height: 14em;
+    opacity: 100%;
+  }
+  .imgsavoiretre {
+    margin-top: 4em;
+    float: left;
+    margin: 1em;
+    width: 16em;
+    height: 14em;
+    opacity: 100%;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 1000px) {
+  .imgLeft {
+    float: left;
+    margin: 1em;
+    width: 10em;
+    height: 8em;
+    opacity: 100%;
+  }
+  .imgRight {
+    float: right;
+    margin-top: 67px;
+    margin: 1em;
+    width: 10em;
+    height: 8em;
+    opacity: 100%;
+  }
+  .imgsavoiretre {
+    margin-top: 4em;
+    float: left;
+    margin: 1em;
+    width: 10em;
+    height: 8em;
+    opacity: 100%;
+  }
+}
+
+.liarticle {
+  padding-top: 1em;
+  height: 2em;
+  font-size: 20px;
+  font-weight: bold;
+  list-style: none;
+  border-radius: 7px;
+  color: white;
+  background-color: #f76f6f;
+  box-shadow: 6px 21px 15px -11px rgb(126, 125, 125);
+}
+
+@media (min-width: 0px) and (max-width: 500px) {
+  .liarticle {
+    color: rgba(247, 111, 111, 1);
+    background-color: #f1f1f1;
+    box-shadow: none;
+  }
+}
+
+p {
+  margin-top: 2em;
 }
 
 body {
-    flex-wrap: wrap;
+  flex-wrap: wrap;
 }
