--- a/prototype.css
+++ b/prototype.css
@@ -134,6 +134,7 @@ nav ul li a:hover {
   font-stretch: normal;
   line-height: normal;
   letter-spacing: normal;
+  text-transform : uppercase;
   text-shadow: 1px 1px 2px #39424e;
   background: white;
   padding-left: 5vw;
