--- a/semaine-type.css
+++ b/semaine-type.css
@@ -134,6 +134,7 @@ nav ul li a:hover {
   font-stretch: normal;
   line-height: normal;
   letter-spacing: normal;
+  text-transform : uppercase;
   text-shadow: 1px 1px 2px #39424e;
   background: white;
   padding-left: 5vw;
@@ -284,8 +285,8 @@ h2 {
 
 article {
   text-align: justify;
-  background-color: rgba(57, 66, 78, 0.055);
-  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 10px 10px 20px 10px rgb(0 0 255 / 20%);
+  border: solid 1px rgba(155, 152, 152, 0.534);
   border-radius: 1em;
   margin-top: -0.5em;
   margin-bottom: 1em;
